--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==2.1.1
-requests==2.26.0
-numpy==1.21.4
-pandas==1.3.4
-scikit-learn==0.24.2
-tensorflow==2.7.0
-protobuf==3.20.0 
+Flask
+requests
+numpy
+pandas
+scikit-learn
+tensorflow
+protobuf
 gunicorn
